--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>IFSC 11003 | James Culwell</title>
   <meta name="description" content="Keyword Rich Description">
   <meta name="author" content="James Culwell">
-
+<link href="assets/css/style.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -15,6 +15,7 @@
   <nav>
     <ul>
         <li><a href="prototype/index.html">First HTML Assigment</a></li>
+        <li><a href="css-demo/index.html">CSS Demo</a></li>
     </ul>
   </nav>
 </body>
