--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
     <ul>
         <li><a href="prototype/index.html">First HTML Assigment</a></li>
         <li><a href="css-demo/index.html">CSS Demo</a></li>
+        <li><a href="assets/img/USMCFlag.jpg">USMC FLag</a></li>
+        <li>Positioning Lab 
+          <ul>
+            <li><a href="posioning-lab/absolute-1.html">Absolute 1</a></li>
+             <li><a href="posioning-lab/absolute-2.html">Absolute 2</a></li>
+              <li><a href="posioning-lab/float-1.html">Float 1</a></li>
+               <li><a href="posioning-lab/float-2.html">Float 2 1</a></li>
+        </li>
+
+
     </ul>
   </nav>
 </body>
