--- a/positioning-lab/absolute-1.html
+++ b/positioning-lab/absolute-1.html
@@ -23,6 +23,64 @@
       color: #FFF;
       text-align: center;
       line-height: 24px;
+
+      
+    /* Exercise 1 - Float */
+    .float-box {
+      width: 45%;
+      height: 100px;
+      background-color: teal;
+      color: white;
+      text-align: center;
+      line-height: 100px;
+      float: left;
+      margin-right: 5%;
+    }
+
+    .float-box:nth-child(2) {
+      background-color: navy;
+      float: right;
+      margin-right: 0;
+    }
+
+    .clearfix::after {
+      content: "";
+      display: table;
+      clear: both;
+    }
+
+    /* Exercise 1 - Grid */
+    .grid-container {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 10px;
+    }
+
+    .grid-item {
+      background-color: blue;
+      color: white;
+      text-align: center;
+      padding: 40px 0;
+    }
+
+    /* Exercise 1 - Flexbox */
+    .flex-container {
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      height: 120px;
+    }
+
+    .flex-item {
+      width: 40%;
+      height: 80px;
+      background-color: aqua;
+      color: navy;
+      text-align: center;
+      line-height: 80px;
+      font-weight: bold;
+    }
+
     }
     #wrapper {
       background-color: #FFF;
@@ -65,4 +123,69 @@
   </section>
 </body>
 
+</html>
+
+ 
+
+   <!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Absolute Layout 1</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f0f8ff;
+      margin: 0;
+      padding: 20px;
+    }
+    h2 {
+      color: navy;
+      text-align: center;
+    }
+    .container {
+      position: relative;
+      height: 250px;
+      background-color: #e0f7fa;
+      border: 2px solid teal;
+      border-radius: 10px;
+    }
+    .absolute-box {
+      position: absolute;
+      width: 120px;
+      height: 120px;
+      color: white;
+      text-align: center;
+      line-height: 120px;
+      border-radius: 10px;
+    }
+    .one {
+      background-color: navy;
+      top: 40px;
+      left: 40px;
+    }
+    .two {
+      background-color: teal;
+      top: 80px;
+      left: 180px;
+    }
+    footer {
+      background-color: teal;
+      color: white;
+      text-align: center;
+      padding: 10px;
+      margin-top: 30px;
+      border-radius: 10px;
+    }
+  </style>
+</head>
+<body>
+  <h2>Absolute Layout 1</h2>
+  <div class="container">
+    <div class="absolute-box one">A1</div>
+    <div class="absolute-box two">A2</div>
+  </div>
+  <footer>Created by Student | Absolute Layout Example 1</footer>
+</body>
 </html>
