--- a/positioning-lab/float-2.html
+++ b/positioning-lab/float-2.html
@@ -66,3 +66,69 @@
 </body>
 
 </html>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Float Layout 2</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f0f8ff;
+      margin: 0;
+      padding: 20px;
+    }
+    h2 {
+      color: navy;
+      text-align: center;
+    }
+    .container {
+      background-color: #e0f7fa;
+      border: 2px solid teal;
+      border-radius: 10px;
+      padding: 15px;
+      overflow: hidden;
+    }
+    .float-alt {
+      width: 30%;
+      height: 100px;
+      color: white;
+      text-align: center;
+      line-height: 100px;
+      float: left;
+      margin-right: 3%;
+      border-radius: 10px;
+    }
+    .float-alt:nth-child(1) {
+      background-color: navy;
+    }
+    .float-alt:nth-child(2) {
+      background-color: teal;
+    }
+    .float-alt:nth-child(3) {
+      background-color: aqua;
+      margin-right: 0;
+      color: navy;
+    }
+    footer {
+      background-color: teal;
+      color: white;
+      text-align: center;
+      padding: 10px;
+      margin-top: 30px;
+      border-radius: 10px;
+    }
+  </style>
+</head>
+<body>
+  <h2>Float Layout 2</h2>
+  <div class="container">
+    <div class="float-alt">Box 1</div>
+    <div class="float-alt">Box 2</div>
+    <div class="float-alt">Box 3</div>
+  </div>
+  <footer>Created by Student | Float Layout Example 2</footer>
+</body>
+</html>
