--- a/index.html
+++ b/index.html
@@ -22,11 +22,12 @@
             <li><a href="positoning-lab/absolute-1.html">Absolute 1</a></li>
              <li><a href="positoning-lab/absolute-2.html">Absolute 2</a></li>
               <li><a href="positoning-lab/float-1.html">Float 1</a></li>
-               <li><a href="positoning-lab/float-2.html">Float 2 1</a></li>
+               <li><a href="positoning-lab/float-2.html">Float 2</a></li>
         </li>
 
 
     </ul>
   </nav>
 </body>
+
 </html>
