--- a/positioning-lab/absolute-1.html
+++ b/positioning-lab/absolute-1.html
@@ -186,6 +186,6 @@
     <div class="absolute-box one">A1</div>
     <div class="absolute-box two">A2</div>
   </div>
-  <footer>Created by Student | Absolute Layout Example 1</footer>
+  <footer>AbsoluteLayout1 </footer>
 </body>
 </html>
