--- a/positioning-lab/absolute-2.html
+++ b/positioning-lab/absolute-2.html
@@ -136,6 +136,6 @@
     <div class="layer two">Layer 2</div>
     <div class="layer three">Layer 3</div>
   </div>
-  <footer>Created by Student | Absolute Layout Example 2</footer>
+  <footer> Absolute Layout 2</footer>
 </body>
 </html>
