--- a/positioning-lab/float-1.html
+++ b/positioning-lab/float-1.html
@@ -125,7 +125,7 @@
     <div class="float-box left">Left Box</div>
     <div class="float-box right">Right Box</div>
   </div>
-  <footer>Created by Student | Float Layout Example 1</footer>
+  <footer> Float Layout 1</footer>
 </body>
 </html>
 
