--- a/positioning-lab/float-2.html
+++ b/positioning-lab/float-2.html
@@ -129,6 +129,6 @@
     <div class="float-alt">Box 2</div>
     <div class="float-alt">Box 3</div>
   </div>
-  <footer>Created by Student | Float Layout Example 2</footer>
+  <footer> Float Layoute 2</footer>
 </body>
 </html>
