--- a/positioning-lab/absolute-2.html
+++ b/positioning-lab/absolute-2.html
@@ -1,141 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Positioning Lab</title>
-  <style type="text/css">
-    /* ---------------Box Sizing----------------- */
-    html {
-      box-sizing: border-box;
-    }
-    *,
-    *:before,
-    *:after {
-      box-sizing: inherit;
-    }
-    body {
-      background-color: #ECECEC;
-      font-weight: bold;
-      font-family: Tahoma, Geneva, sans-serif;
-      color: #FFF;
-      text-align: center;
-      line-height: 24px;
-    }
-    #wrapper {
-      background-color: #FFF;
-      border: 1px solid #c0c0c0;
-      width: 800px;
-      margin-right: auto;
-      margin-left: auto;
-      text-shadow: 2px 2px #000;
-    }
-    #navy {
-      background-color: #001f3f;
-    }
-    #teal {
-      background-color: #39CCCC;
-    }
-    #blue {
-      background-color: #0074D9;
-    }
-    #aqua {
-      background-color: #7FDBFF;
-    }
-    #footer {
-      background-color: #666;
-    }
-    h1 {
-      color: #000;
-      font-weight: normal;
-      padding: 50px;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ex 2: Float Row</title>
+    <style type="text/css">
+        /* Basic styles - without box-sizing */
+        body {
+            background-color: #ECECEC;
+            font-weight: bold;
+            font-family: Tahoma, Geneva, sans-serif;
+            color: #FFF;
+            text-align: center;
+            line-height: 24px;
+        }
+        h1 {
+            color: #000;
+            font-weight: normal;
+            padding: 20px;
+        }
+        #wrapper {
+            background-color: #FFF;
+            border: 1px solid #c0c0c0;
+            width: 800px;
+            margin: 20px auto;
+            text-shadow: 2px 2px #000;
+            overflow: hidden; 
+            min-height: 200px; 
+            padding: 5px; /* Weird padding choice */
+        }
+        .box {
+            height: 150px;
+            line-height: 130px; 
+            text-shadow: 1px 1px #000;
+            
+            /* REQUIRED: Float the boxes */
+            float: left;
+            /* Using basic percentage calculation */
+            width: 23%; 
+            margin: 1%; 
+        }
+        #navy { background-color: #001f3f; }
+        #teal { background-color: #39CCCC; }
+        #blue { background-color: #0074D9; }
+        #aqua { background-color: #7FDBFF; }
+        
+        #footer { 
+            background-color: #666; 
+            clear: both; 
+            padding: 15px;
+            /* Using percentage width here, but it doesn't quite match the boxes above */
+            width: 98%; 
+            margin: 10px auto; 
+            line-height: normal; 
+        }
+    </style>
 </head>
 <body>
-  <h1>Exercise</h1>
-  <section id="wrapper">
-    <div id="navy">Navy</div>
-    <div id="teal">Teal</div>
-    <div id="blue">Blue</div>
-    <div id="aqua">Aqua</div>
-    <div id="footer">Footer</div>
-  </section>
-</body>
-
-</html>
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Absolute Layout 2</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f0f8ff;
-      margin: 0;
-      padding: 20px;
-    }
-    h2 {
-      color: navy;
-      text-align: center;
-    }
-    .container {
-      position: relative;
-      height: 250px;
-      background-color: #e0f7fa;
-      border: 2px solid teal;
-      border-radius: 10px;
-    }
-    .layer {
-      position: absolute;
-      width: 120px;
-      height: 120px;
-      color: white;
-      text-align: center;
-      line-height: 120px;
-      opacity: 0.9;
-      border-radius: 10px;
-    }
-    .one {
-      background-color: blue;
-      top: 30px;
-      left: 40px;
-      z-index: 1;
-    }
-    .two {
-      background-color: teal;
-      top: 70px;
-      left: 80px;
-      z-index: 2;
-    }
-    .three {
-      background-color: navy;
-      top: 110px;
-      left: 120px;
-      z-index: 3;
-    }
-    footer {
-      background-color: navy;
-      color: white;
-      text-align: center;
-      padding: 10px;
-      margin-top: 30px;
-      border-radius: 10px;
-    }
-  </style>
-</head>
-<body>
-  <h2>Absolute Layout 2 (Layered)</h2>
-  <div class="container">
-    <div class="layer one">Layer 1</div>
-    <div class="layer two">Layer 2</div>
-    <div class="layer three">Layer 3</div>
-  </div>
-  <footer> Absolute Layout 2</footer>
+    <h1>Exercise 2: Single Row Layout (Required: Float)</h1>
+    <section id="wrapper">
+        <div id="navy" class="box">Navy</div>
+        <div id="teal" class="box">Teal</div>
+        <div id="blue" class="box">Blue</div>
+        <div id="aqua" class="box">Aqua</div>
+        <div id="footer">Footer</div>
+    </section>
 </body>
 </html>
