--- a/index.html
+++ b/index.html
@@ -29,7 +29,18 @@
            <li><a href="positioning-lab/float-1.html">Float 1</a></li>  
             <li><a href="positioning-lab/float-2.html">Float 2</a></li>
 
+            <li> CSS Grid Layout Lab </li>
+            </nav><ul>
+              <li><a href="css-grid-lab/grid-two-col-equal.html"> Grid Two Col Equal </a></li>
+              <li><a href="css-grid-lab/grid-two-col-left.html"> Grid Two Col Left </a></li>
+              <li><a href="css-grid-lab/grid-two-col-right.html"> Grid Two Col Right </a></li>
+              <li><a href="css-grid-lab/grid-two-col-stacked.html"> Grid Two Col Stacked </a></li>
+
+            </ul>
+
       </ul>
+
+
   </nav>
 </body>
 
