--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
         <li><a href="css-demo/index.html">CSS Demo</a></li>
         <li><a href="assets/img/USMCFlag.jpg">USMC FLag</a></li>
         <li><a href="assets/img/Flexboxfroggy.png">Flexboxfroggy</a></li>
-        <li><a href="assets/img/CSS Diner (Extra Credit).png">CSS Diner (Extra Credit)</a></li>
+        <li><a href="assets/img/CSS-GridGarden.png">CSS-Grid-Garden</a></li>
+        <li><a href="assets/img/CSS-Diner.png">CSS Diner (Extra Credit)</a></li>
         
         <body>
   <h1>Positioning Lab<h1>
@@ -39,13 +40,13 @@
               <li><a href="css-grid-lab/grid-two-col-stacked.html"> Grid Two Col Stacked </a></li>
 
               
-              <li> Mars Rover Project </li>
+        <li> Mars Rover Project </li>
             </nav>
               </ul>
 
               <li><a href="mars-rovers/index.html"> Mars Rover Project </a></li>
-              <li><a href="mars-rovers/css/js/script.js"> JS Script </a></li>
-              <li><a href="mars-rovers/css/img/"</li>
+              <li><a href="mars-rovers/js/script.js"> JS Script </a></li>
+              <li><a href="mars-rovers/assets/css/img/nasa-logo.png.png"> Nasa Logo </a></li>
               <li><a href="mars-rovers/css/README.md/"> Read Me </a></li>
               <li><a href="mars-rovers/faq.html"> FAQ </a></li>
               <li><a href="mars-rovers/mission-history.html"> Mission History </a></li>
