--- a/mars-rovers/index.html
+++ b/mars-rovers/index.html
@@ -1,83 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="NASA Mars Rover student project about Curiosity and Perseverance rovers.">
-  <meta name="keywords" content="NASA, Mars Rover, Curiosity, Perseverance, Space">
-  <meta name="robots" content="noindex">
-  <title>NASA Mars Rovers - Home</title>
-  <link rel="stylesheet" href="css/style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="NASA Mars Rovers – Robotic explorers on the Red Planet" />
+  <meta name="keywords" content="NASA, Mars, Rover, Perseverance, Curiosity" />
+  <meta name="robots" content="noindex" />
+  <title>NASA Mars Rovers | Home</title>
+  <link rel="stylesheet" href="css/styles.css" />
 </head>
+
 <body>
-  <a class="skip-link" href="#main">Skip to main content</a>
-
-  <header class="site-header" role="banner">
-    <div class="brand">
-      <img src="images/nasa-logo.png" alt="NASA logo" width="50" height="50">
-      <div>
-        <h1>NASA Mars Rovers</h1>
-        <p class="tagline">Robotic Explorers on the Red Planet</p>
-      </div>
-    </div>
-
-    <nav class="main-nav" role="navigation" aria-label="Main navigation">
+  <header>
+    <h1>NASA Mars Rovers</h1>
+    <p class="tagline">Robotic Explorers on the Red Planet</p>
+    <nav role="navigation">
       <ul>
-        <li><a href="index.html">Home</a></li>
+        <li><a href="index.html" class="active">Home</a></li>
         <li><a href="mission-history.html">Mission History</a></li>
         <li><a href="faq.html">FAQ</a></li>
-        <li><a href="https://mars.nasa.gov" target="_blank">NASA Mars Site</a></li>
       </ul>
     </nav>
-
-    <button id="dark-toggle" aria-pressed="false" title="Toggle dark mode">🌙</button>
   </header>
 
-  <main id="main" role="main">
-    <section class="hero">
-      <h2>Exploring the Surface of Mars</h2>
+  <main role="main">
+    <section>
+      <h2>Exploring Mars with Curiosity and Perseverance</h2>
       <p>
-        This website is a student project about NASA’s Mars Rover Program. These rovers were
-        sent to Mars to study its rocks, weather, and if life could have ever existed there.
-        Each rover helps scientists learn something new about Mars every day.
+        NASA’s Mars Rover Program has revolutionized our understanding of the Red Planet. 
+        From the early missions like Spirit and Opportunity to the latest, cutting-edge 
+        Perseverance rover, each robotic explorer has pushed the boundaries of technology 
+        and human curiosity.
       </p>
-    </section>
+      <img src="https://mars.nasa.gov/system/news_items/main_images/9035_PIA25681-FigureA-web.jpg" alt="Perseverance rover on Mars" />
 
-    <section class="rover" id="curiosity">
       <h3>Curiosity Rover</h3>
-      <img src="images/curiosity.jpg" alt="Curiosity rover on Mars" class="rover-hero">
       <p>
-        Curiosity launched in 2011 and landed in 2012 inside Gale Crater. It’s about the size of a car and has
-        tools that can test soil and rocks. It found out that Mars used to have water and the right conditions
-        that might have supported small life forms.
+        Launched in 2011 and landing in Gale Crater in August 2012, Curiosity’s mission 
+        was to determine whether Mars ever had the right environmental conditions 
+        to support microbial life.
       </p>
-    </section>
 
-    <section class="rover" id="perseverance">
       <h3>Perseverance Rover</h3>
-      <img src="images/perseverance.jpg" alt="Perseverance rover exploring Mars" class="rover-hero">
       <p>
-        Perseverance landed in 2021 and is NASA’s most advanced rover yet.
-        It’s collecting rock samples to bring back to Earth someday and even
-        carried a helicopter named Ingenuity that flew in Mars’ thin air!
+        Perseverance landed in February 2021 with advanced instruments designed to collect 
+        and store rock samples for future return to Earth. Its companion helicopter, Ingenuity, 
+        made the first powered flight on another planet.
       </p>
     </section>
 
-    <section class="callout">
-      <h4>Why Explore Mars?</h4>
-      <p>
-        Studying Mars helps us understand more about our solar system and how
-        Earth might have looked long ago. It’s also the first step toward
-        sending humans to the Red Planet in the future.
-      </p>
+    <section>
+      <h2>Rover Comparison Table</h2>
+      <table>
+        <thead>
+          <tr>
+            <th>Feature</th>
+            <th>Curiosity</th>
+            <th>Perseverance</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Launch Year</td>
+            <td>2011</td>
+            <td>2020</td>
+          </tr>
+          <tr>
+            <td>Landing Site</td>
+            <td>Gale Crater</td>
+            <td>Jezero Crater</td>
+          </tr>
+          <tr>
+            <td>Main Objective</td>
+            <td>Assess habitability and study Martian climate</td>
+            <td>Search for signs of ancient life and collect samples</td>
+          </tr>
+        </tbody>
+      </table>
     </section>
   </main>
 
-  <footer class="site-footer" role="contentinfo">
-    <p>This website was created as a student project for educational purposes. NASA is not affiliated with or endorsing this work.</p>
-    <p>Contact: <a href="mailto:student@example.com">student@example.com</a></p>
+  <footer role="contentinfo">
+    <p>
+      This website was created as a student project for educational purposes. 
+      NASA is not affiliated with or endorsing this work.
+    </p>
+    <p>
+      Contact: <a href="mailto:jcculwell@ualr.edu">jcculwell@ualr.edu</a> |
+      <a href="https://mars.nasa.gov" target="_blank">Visit NASA Mars</a>
+    </p>
+    <button id="darkModeToggle">Toggle Dark Mode</button>
   </footer>
 
+  <!-- JavaScript link -->
   <script src="js/script.js"></script>
 </body>
 </html>
